--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastmcp>=2.2.5",
     "google-api-python-client>=2.168.0",
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.2",
     "httpx>=0.28.1",
     "mcp[cli]>=1.6.0",
 ]
+
+[tool.setuptools]
+packages = ["auth", "gcalendar", "core"]
