--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.115.12",
     "fastmcp>=2.3.3",
     "google-api-python-client>=2.168.0",
     "google-auth-httplib2>=0.2.0",
