--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,4 +1,18 @@
-version: 1
-start:
-  command: ["python", "main.py"]
-  port: 8000
+# Smithery.ai configuration
+startCommand:
+    type: http-transport
+    configSchema:
+      # JSON Schema defining the configuration options for the MCP.
+      {}
+    commandFunction:
+      # A function that produces the CLI command to start the MCP on stdio.
+      |-
+      (config) => ({
+        "command": "python",
+        "args": [
+          "main.py"
+        ],
+        "env": {
+          ...
+        }
+      })
