update smithery file

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,6 +1,6 @@
 # Smithery.ai configuration
 startCommand:
-    type: http-transport
+    type: http
     configSchema:
       # JSON Schema defining the configuration options for the MCP.
       {}
