--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi>=0.115.12",
     "fastmcp>=2.3.3",
     "google-api-python-client>=2.168.0",
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.2",
     "httpx>=0.28.1",
-    "mcp[cli]>=1.6.0",
-    "sse-starlette>=2.3.3",
-    "uvicorn>=0.34.2",
 ]
 
 [tool.setuptools]
-packages = ["auth", "gcalendar", "core"]
+packages = ["auth", "gcalendar", "core", "gdocs", "gdrive", "gmail", "config"]
