--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ name = "google-workspace-mcp"
 version = "0.1.1"
 description = "Comprehensive, highly performant Google Workspace Streamable HTTP & SSE MCP Server for Calendar, Gmail, Docs, Sheets, Slides & Drive"
 readme = "README.md"
+license = {file = "LICENSE"}
+authors = [
+    {name = "Taylor Wilsdon", email = "taylor@taylorwilsdon.com"}
+]
+keywords = ["mcp", "google", "workspace", "llm", "ai", "claude", "model", "context", "protocol", "server"]
 requires-python = ">=3.11"
 dependencies = [
     "fastmcp>=2.3.3",
@@ -14,6 +19,30 @@ dependencies = [
     "google-auth-oauthlib>=1.2.2",
     "httpx>=0.28.1",
 ]
+
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
+    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Typing :: Typed",
+]
+
+urls = {
+    "Homepage"      = "https://github.com/taylorwilsdon/google_workspace_mcp",
+    "Source"        = "https://github.com/taylorwilsdon/google_workspace_mcp",
+    "Documentation" = "https://github.com/taylorwilsdon/google_workspace_mcp#readme",
+    "Issues"        = "https://github.com/taylorwilsdon/google_workspace_mcp/issues",
+}
 
 [tool.setuptools]
 packages = ["auth", "gcalendar", "core", "gdocs", "gdrive", "gmail", "config"]
