--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ keywords = [
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "fastapi>=0.115.12",
     "fastmcp>=2.3.3",
     "google-api-python-client>=2.168.0",
     "google-auth-httplib2>=0.2.0",
