Fix pyproject.toml for uvx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,5 +45,9 @@ classifiers = [
     "Typing :: Typed",
 ]
 
+[project.scripts]
+google-workspace-mcp = "main:main"
+
 [tool.setuptools]
-packages = ["auth", "gcalendar", "core", "gdocs", "gdrive", "gmail", "config", "gchat", "gsheets"]
+packages = ["auth", "gcalendar", "core", "gdocs", "gdrive", "gmail", "gchat", "gsheets", "gforms"]
+py-modules = ["main"]
