--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,53 +1,23 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = [ "setuptools>=61.0", "wheel",]
 build-backend = "setuptools.build_meta"
+
 [project]
 name = "google-workspace-mcp"
 version = "0.1.1"
 description = "Comprehensive, highly performant Google Workspace Streamable HTTP & SSE MCP Server for Calendar, Gmail, Docs, Sheets, Slides & Drive"
 license = "MIT"
-authors = [{ name = "Taylor Wilsdon", email = "taylor@taylorwilsdon.com" }]
-keywords = [
-    "mcp",
-    "google",
-    "workspace",
-    "llm",
-    "ai",
-    "claude",
-    "model",
-    "context",
-    "protocol",
-    "server",
-]
+keywords = [ "mcp", "google", "workspace", "llm", "ai", "claude", "model", "context", "protocol", "server",]
 requires-python = ">=3.11"
-dependencies = [
-    "fastapi>=0.115.12",
-    "fastmcp>=2.3.3",
-    "google-api-python-client>=2.168.0",
-    "google-auth-httplib2>=0.2.0",
-    "google-auth-oauthlib>=1.2.2",
-    "httpx>=0.28.1",
-]
-
-classifiers = [
-    "Development Status :: 4 - Beta",
-    "Environment :: Console",
-    "Intended Audience :: Developers",
-    "Natural Language :: English",
-    "Operating System :: OS Independent",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
-    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
-    "Topic :: Software Development :: Libraries :: Application Frameworks",
-    "Typing :: Typed",
-]
+dependencies = [ "fastapi>=0.115.12", "fastmcp>=2.3.3", "google-api-python-client>=2.168.0", "google-auth-httplib2>=0.2.0", "google-auth-oauthlib>=1.2.2", "httpx>=0.28.1", "tomlkit",]
+classifiers = [ "Development Status :: 4 - Beta", "Environment :: Console", "Intended Audience :: Developers", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Internet :: WWW/HTTP :: HTTP Servers", "Topic :: Software Development :: Libraries :: Application Frameworks", "Typing :: Typed",]
+[[project.authors]]
+name = "Taylor Wilsdon"
+email = "taylor@taylorwilsdon.com"
 
 [project.scripts]
 google-workspace-mcp = "main:main"
 
 [tool.setuptools]
-packages = ["auth", "gcalendar", "core", "gdocs", "gdrive", "gmail", "gchat", "gsheets", "gforms", "gslides"]
-py-modules = ["main"]
+packages = [ "auth", "gcalendar", "core", "gdocs", "gdrive", "gmail", "gchat", "gsheets", "gforms", "gslides",]
+py-modules = [ "main",]
