--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "dxt_version": "0.1",
   "name": "workspace-mcp",
   "display_name": "Google Workspace MCP",
-  "version": "1.0.2",
+  "version": "1.1.1",
   "description": "Full natural language control over Google Calendar, Drive, Gmail, Docs, Sheets, Slides, Forms, and Chat through all MCP clients, AI assistants and developer tools",
   "long_description": "A production-ready MCP server that integrates all major Google Workspace services with AI assistants. Built with FastMCP for optimal performance, featuring advanced authentication handling, service caching, and streamlined development patterns.",
   "author": {
@@ -112,7 +112,7 @@
       "default": "8000"
     },
     "OAUTHLIB_INSECURE_TRANSPORT": {
-      "type": "int",
+      "type": "number",
       "title": "OAuth Insecure Transport",
       "description": "Allow OAuth over HTTP for development (set to '1' for development only)",
       "required": false,
