--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,5 +57,5 @@ Changelog = "https://github.com/taylorwilsdon/google_workspace_mcp/releases"
 workspace-mcp = "main:main"
 
 [tool.setuptools]
-packages = [ "auth", "gcalendar", "core", "gdocs", "gdrive", "gmail", "gchat", "gsheets", "gforms", "gslides"]
+packages = [ "auth", "gcalendar", "core", "gdocs", "gdrive", "gmail", "gchat", "gsheets", "gforms", "gslides", "gtasks"]
 py-modules = [ "main"]
