--- a/.dxtignore
+++ b/.dxtignore
@@ -14,6 +14,7 @@ dist/
 venv/
 .idea/
 .vscode/
+.claude/
 
 # ---- macOS clutter -----------------------------------------------------
 .DS_Store
@@ -21,7 +22,6 @@ venv/
 # ---- Secrets & Credentials --------------------------------------------
 client_secret.json
 .credentials/
-*.json
 *.key
 *.pem
 *.p12
