Add mcp_debug logs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ venv/
 # ---- Secrets -----------------------------------------------------------
 client_secret.json
 
+# ---- Logs --------------------------------------------------------------
+mcp_server_debug.log
