--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
  "google-auth-oauthlib>=1.2.2",
  "httpx>=0.28.1",
  "pyjwt>=2.10.1",
+ "ruff>=0.12.4",
  "tomlkit",
 ]
 classifiers = [
