--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
  "pyjwt>=2.10.1",
  "ruff>=0.12.4",
  "tomlkit",
+ "aiohttp>=3.9.0",
+ "cachetools>=5.3.0",
+ "cryptography>=41.0.0",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
