--- a/manifest.json
+++ b/manifest.json
@@ -127,7 +127,7 @@
     "USER_GOOGLE_EMAIL": {
       "type": "string",
       "title": "User Google Email",
-      "description": "Your Google email address for authentication (e.g., your.email@gmail.com)",
+      "description": "Optional default email for authentication flows. If set, the LLM won't need to specify your email when calling start_google_auth",
       "required": false,
       "sensitive": false,
       "validation": {
