--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,65 +1,108 @@
-version: 1
-
-start:
-  command: ["uv", "run", "main.py", "--transport", "streamable-http"]
-  port: 8000
-
-# Configuration schema for deployment environments
-configSchema:
-  type: object
-  required:
-    - googleOauthClientId
-    - googleOauthClientSecret
-  properties:
-    googleOauthClientId:
-      type: string
-      description: "(required) - Your Google OAuth 2.0 Client ID from Google Cloud Console"
-    googleOauthClientSecret:
-      type: string
-      description: "(required) - Your Google OAuth 2.0 Client Secret from Google Cloud Console"
-    userGoogleEmail:
-      type: string
-      description: "(optional) - Default email for single-user auth - avoids needing to specify email in system prompts"
-    googleOauthRedirectUri:
-      type: string
-      description: "(optional) - OAuth redirect URI - Default: http://localhost:8000/oauth2callback"
-    googleClientSecretPath:
-      type: string
-      description: "(optional) - Path to client_secret.json file (alternative to environment variables)"
-    workspaceMcpBaseUri:
-      type: string
-      description: "(optional) - Base URI for the server - Default: http://localhost (do not include port)"
-    port:
-      type: string
-      description: "(optional) - Port the server listens on - Default: 8000 (used by both PORT and WORKSPACE_MCP_PORT)"
-    mcpSingleUserMode:
-      type: string
-      description: "(optional) - Set to '1' to enable single-user mode - Default: false"
-    mcpEnableOauth21:
-      type: string
-      description: "(optional) - Set to 'true' to enable OAuth 2.1 multi-user support - Default: false"
-    oauthlibInsecureTransport:
-      type: string
-      description: "(optional) - Set to '1' for development environments - Default: none"
-    googlePseApiKey:
-      type: string
-      description: "(optional) - API key for Google Custom Search - required for search tools"
-    googlePseEngineId:
-      type: string
-      description: "(optional) - Programmable Search Engine ID for Custom Search - required for search tools"
-
-# Environment variable mapping for runtime
-envMapping:
-  GOOGLE_OAUTH_CLIENT_ID: googleOauthClientId
-  GOOGLE_OAUTH_CLIENT_SECRET: googleOauthClientSecret
-  USER_GOOGLE_EMAIL: userGoogleEmail
-  GOOGLE_OAUTH_REDIRECT_URI: googleOauthRedirectUri
-  GOOGLE_CLIENT_SECRET_PATH: googleClientSecretPath
-  WORKSPACE_MCP_BASE_URI: workspaceMcpBaseUri
-  PORT: port
-  WORKSPACE_MCP_PORT: port
-  MCP_SINGLE_USER_MODE: mcpSingleUserMode
-  MCP_ENABLE_OAUTH21: mcpEnableOauth21
-  OAUTHLIB_INSECURE_TRANSPORT: oauthlibInsecureTransport
-  GOOGLE_PSE_API_KEY: googlePseApiKey
-  GOOGLE_PSE_ENGINE_ID: googlePseEngineId
+startCommand:
+  type: stdio
+  configSchema:
+    type: object
+    required:
+      - googleOauthClientId
+      - googleOauthClientSecret
+    properties:
+      googleOauthClientId:
+        type: string
+        description: "Your Google OAuth 2.0 Client ID from Google Cloud Console"
+      googleOauthClientSecret:
+        type: string
+        description: "Your Google OAuth 2.0 Client Secret from Google Cloud Console"
+      userGoogleEmail:
+        type: string
+        default: ""
+        description: "Default email for single-user auth - avoids needing to specify email in system prompts"
+      googleOauthRedirectUri:
+        type: string
+        default: ""
+        description: "OAuth redirect URI - uses default http://localhost:8000/oauth2callback if not set"
+      googleClientSecretPath:
+        type: string
+        default: ""
+        description: "Path to client_secret.json file (alternative to environment variables)"
+      workspaceMcpBaseUri:
+        type: string
+        default: "http://localhost"
+        description: "Base URI for the server (do not include port)"
+      workspaceMcpPort:
+        type: number
+        default: 8000
+        description: "Port the server listens on"
+      mcpSingleUserMode:
+        type: boolean
+        default: false
+        description: "Enable single-user mode - bypasses session mapping"
+      mcpEnableOauth21:
+        type: boolean
+        default: false
+        description: "Enable OAuth 2.1 multi-user support (requires streamable-http)"
+      oauthlibInsecureTransport:
+        type: boolean
+        default: false
+        description: "Enable insecure transport for development environments"
+      googlePseApiKey:
+        type: string
+        default: ""
+        description: "API key for Google Custom Search - required for search tools"
+      googlePseEngineId:
+        type: string
+        default: ""
+        description: "Programmable Search Engine ID for Custom Search - required for search tools"
+      tools:
+        type: string
+        default: ""
+        description: "Comma-separated list of tools to enable (gmail,drive,calendar,docs,sheets,chat,forms,slides,tasks,search). Leave empty for all tools."
+  commandFunction:
+    |-
+    (config) => {
+      const args = ['run', 'main.py'];
+      
+      // Add single-user flag if enabled
+      if (config.mcpSingleUserMode) {
+        args.push('--single-user');
+      }
+      
+      // Add tools selection if specified
+      if (config.tools && config.tools.trim() !== '') {
+        args.push('--tools');
+        args.push(...config.tools.split(',').map(t => t.trim()).filter(t => t));
+      }
+      
+      return {
+        command: 'uv',
+        args: args,
+        env: {
+          GOOGLE_OAUTH_CLIENT_ID: config.googleOauthClientId,
+          GOOGLE_OAUTH_CLIENT_SECRET: config.googleOauthClientSecret,
+          ...(config.userGoogleEmail && { USER_GOOGLE_EMAIL: config.userGoogleEmail }),
+          ...(config.googleOauthRedirectUri && { GOOGLE_OAUTH_REDIRECT_URI: config.googleOauthRedirectUri }),
+          ...(config.googleClientSecretPath && { GOOGLE_CLIENT_SECRET_PATH: config.googleClientSecretPath }),
+          WORKSPACE_MCP_BASE_URI: config.workspaceMcpBaseUri,
+          WORKSPACE_MCP_PORT: String(config.workspaceMcpPort),
+          PORT: String(config.workspaceMcpPort),
+          ...(config.mcpSingleUserMode && { MCP_SINGLE_USER_MODE: '1' }),
+          ...(config.mcpEnableOauth21 && { MCP_ENABLE_OAUTH21: 'true' }),
+          ...(config.oauthlibInsecureTransport && { OAUTHLIB_INSECURE_TRANSPORT: '1' }),
+          ...(config.googlePseApiKey && { GOOGLE_PSE_API_KEY: config.googlePseApiKey }),
+          ...(config.googlePseEngineId && { GOOGLE_PSE_ENGINE_ID: config.googlePseEngineId })
+        }
+      };
+    }
+  exampleConfig:
+    googleOauthClientId: "your-client-id.apps.googleusercontent.com"
+    googleOauthClientSecret: "your-client-secret"
+    userGoogleEmail: ""
+    googleOauthRedirectUri: ""
+    googleClientSecretPath: ""
+    workspaceMcpBaseUri: "http://localhost"
+    workspaceMcpPort: 8000
+    mcpSingleUserMode: false
+    mcpEnableOauth21: false
+    oauthlibInsecureTransport: false
+    googlePseApiKey: ""
+    googlePseEngineId: ""
+    tools: ""
