feat: implement Taylor's requested changes for PR #173
- Remove all image insertion functions from gdocs/docs_tools.py as requested
- Add tool tiers for Drive permission functions in 'complete' tier
- Keep Drive permission functionality (get_drive_file_permissions, check_drive_file_public_access)
- Remove insert_doc_image from docs complete tier in tool_tiers.yaml

Addresses Taylor's feedback: 'drop the image insert stuff as that's already available'
and 'Need to add tool tiers for these, let me know which you want I'm assuming complete'

--- a/core/tool_tiers.yaml
+++ b/core/tool_tiers.yaml
@@ -24,7 +24,9 @@ drive:
     - create_drive_file
   extended:
     - list_drive_items
-  complete: []
+  complete:
+    - get_drive_file_permissions
+    - check_drive_file_public_access
 
 calendar:
   core:
@@ -47,7 +49,6 @@ docs:
     - list_docs_in_folder
     - insert_doc_elements
   complete:
-    - insert_doc_image
     - update_doc_headers_footers
     - batch_update_doc
     - inspect_doc_structure
