--- a/core/tool_tiers.yaml
+++ b/core/tool_tiers.yaml
@@ -49,6 +49,7 @@ docs:
     - list_docs_in_folder
     - insert_doc_elements
   complete:
+    - insert_doc_image
     - update_doc_headers_footers
     - batch_update_doc
     - inspect_doc_structure
