--- a/core/tool_tiers.yaml
+++ b/core/tool_tiers.yaml
@@ -43,6 +43,7 @@ docs:
     - get_doc_content
     - create_doc
     - modify_doc_text
+    - export_doc_to_pdf
   extended:
     - search_docs
     - find_and_replace_doc
