--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,13 @@ services:
     container_name: gws_mcp
     ports:
       - "8000:8000"
+    environment:
+      - GOOGLE_MCP_CREDENTIALS_DIR=/store_creds
     volumes:
       - ./client_secret.json:/app/client_secret.json:ro
+      - store_creds:/store_creds
     env_file:
       - .env
+
+volumes:
+  store_creds:
