--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - GOOGLE_MCP_CREDENTIALS_DIR=/store_creds
     volumes:
       - ./client_secret.json:/app/client_secret.json:ro
-      - store_creds:/store_creds
+      - store_creds:/app/store_creds:rw
     env_file:
       - .env
 
