--- a/core/tool_tiers.yaml
+++ b/core/tool_tiers.yaml
@@ -44,6 +44,7 @@ docs:
     - create_doc
     - modify_doc_text
   extended:
+    - export_doc_to_pdf
     - search_docs
     - find_and_replace_doc
     - list_docs_in_folder
