--- a/smithery.yaml
+++ b/smithery.yaml
@@ -78,7 +78,7 @@ startCommand:
       }
       
       return {
-        command: 'uv',
+        command: 'uv run main.py',
         args: ['run', 'main.py'],
         env: {
           GOOGLE_OAUTH_CLIENT_ID: config.googleOauthClientId,
