--- a/smithery.yaml
+++ b/smithery.yaml
@@ -78,8 +78,8 @@ startCommand:
       }
       
       return {
-        command: 'uv run main.py',
-        args: ['run', 'main.py'],
+        command: 'uv',
+        args: ['run', 'python', 'main.py'],
         env: {
           GOOGLE_OAUTH_CLIENT_ID: config.googleOauthClientId,
           GOOGLE_OAUTH_CLIENT_SECRET: config.googleOauthClientSecret,
