fix claude problems

--- a/manifest.json
+++ b/manifest.json
@@ -44,63 +44,43 @@
   "tools": [
     {
       "name": "google_calendar",
-      "display_name": "Google Calendar",
-      "description": "Manage Google Calendar through AI with full calendar and event capability",
-      "category": "productivity"
+      "description": "Manage Google Calendar through AI with full calendar and event capability"
     },
     {
       "name": "google_drive",
-      "display_name": "Google Drive",
-      "description": "Manage Google Drive through AI with full search, list and create capability",
-      "category": "storage"
+      "description": "Manage Google Drive through AI with full search, list and create capability"
     },
     {
       "name": "gmail",
-      "display_name": "Gmail",
-      "description": "Manage Gmail through AI with support for search, draft, send, respond and more",
-      "category": "communication"
+      "description": "Manage Gmail through AI with support for search, draft, send, respond and more"
     },
     {
       "name": "google_docs",
-      "display_name": "Google Docs",
-      "description": "Manage Google Docs through AI with capability to search, extract, list, create and copy - including templated variable replacement support",
-      "category": "productivity"
+      "description": "Manage Google Docs through AI with capability to search, extract, list, create and copy - including templated variable replacement support"
     },
     {
       "name": "google_sheets",
-      "display_name": "Google Sheets",
-      "description": "Manage Google Sheets through AI with support for read, write, modify and create",
-      "category": "productivity"
+      "description": "Manage Google Sheets through AI with support for read, write, modify and create"
     },
     {
       "name": "google_slides",
-      "display_name": "Google Slides",
-      "description": "Manage Google Slides through AI with support for creation, modification and presentation management",
-      "category": "productivity"
+      "description": "Manage Google Slides through AI with support for creation, modification and presentation management"
     },
     {
       "name": "google_forms",
-      "display_name": "Google Forms",
-      "description": "Manage Google Forms through AI with support for creation, retrieval, publishing, response management and more",
-      "category": "productivity"
+      "description": "Manage Google Forms through AI with support for creation, retrieval, publishing, response management and more"
     },
     {
       "name": "google_chat",
-      "display_name": "Google Chat",
-      "description": "Manage Google Chat through AI with support for space and DM list, get, send and search messages",
-      "category": "communication"
+      "description": "Manage Google Chat through AI with support for space and DM list, get, send and search messages"
     },
     {
       "name": "google_tasks",
-      "display_name": "Google Tasks",
-      "description": "Manage Google Tasks through AI with support for task creation, management, and organization",
-      "category": "productivity"
+      "description": "Manage Google Tasks through AI with support for task creation, management, and organization"
     },
     {
       "name": "google_custom_search",
-      "display_name": "Google Custom Search",
-      "description": "Perform custom web searches through AI using Google Programmable Search Engine with site-specific and filtered search capabilities",
-      "category": "search"
+      "description": "Perform custom web searches through AI using Google Programmable Search Engine with site-specific and filtered search capabilities"
     }
   ],
   "user_config": {
@@ -109,138 +89,78 @@
       "title": "Google OAuth Client ID",
       "description": "OAuth 2.0 client ID from Google Cloud Console (e.g., your-client-id.apps.googleusercontent.com)",
       "required": false,
-      "sensitive": false,
-      "default": "your-client-id.apps.googleusercontent.com",
-      "validation": {
-        "pattern": "^[a-zA-Z0-9-]+\\.apps\\.googleusercontent\\.com$"
-      }
+      "default": "your-client-id.apps.googleusercontent.com"
     },
     "GOOGLE_OAUTH_CLIENT_SECRET": {
       "type": "string",
       "title": "Google OAuth Client Secret",
       "description": "OAuth 2.0 client secret from Google Cloud Console",
-      "required": false,
-      "sensitive": true,
-      "validation": {
-        "min_length": 24
-      }
+      "required": false
     },
     "USER_GOOGLE_EMAIL": {
       "type": "string",
       "title": "User Google Email",
       "description": "Optional default email for authentication flows. If set, the LLM won't need to specify your email when calling start_google_auth",
-      "required": false,
-      "sensitive": false,
-      "validation": {
-        "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+[.][a-zA-Z]{2,}$"
-      }
+      "required": false
     },
     "GOOGLE_OAUTH_REDIRECT_URI": {
       "type": "string",
       "title": "Google OAuth Redirect URI",
       "description": "OAuth 2.0 redirect URI for authentication callback",
       "required": false,
-      "sensitive": false,
-      "default": "http://localhost:8000/oauth2callback",
-      "validation": {
-        "pattern": "^https?://[a-zA-Z0-9.-]+(:[0-9]+)?/oauth2callback$"
-      }
+      "default": "http://localhost:8000/oauth2callback"
     },
     "GOOGLE_CLIENT_SECRET_PATH": {
       "type": "file",
       "title": "Google Client Secret File Path",
       "description": "Path to the client_secret.json file containing OAuth credentials",
-      "required": false,
-      "sensitive": false,
-      "validation": {
-        "extensions": [".json"]
-      }
+      "required": false
     },
     "GOOGLE_CLIENT_SECRETS": {
       "type": "string",
       "title": "Google Client Secrets (Legacy)",
       "description": "Legacy environment variable for client secret file path (use GOOGLE_CLIENT_SECRET_PATH instead)",
-      "required": false,
-      "sensitive": false,
-      "deprecated": true
+      "required": false
     },
     "WORKSPACE_MCP_BASE_URI": {
       "type": "string",
       "title": "Workspace MCP Base URI",
       "description": "Base URI for the MCP server, affects OAuth redirect URI and Gemini function calling",
       "required": false,
-      "sensitive": false,
-      "default": "http://localhost",
-      "validation": {
-        "pattern": "^https?://[a-zA-Z0-9.-]+(:[0-9]+)?$"
-      }
+      "default": "http://localhost"
     },
     "WORKSPACE_MCP_PORT": {
       "type": "number",
       "title": "Workspace MCP Port",
       "description": "Port number for the MCP server to listen on",
       "required": false,
-      "sensitive": false,
-      "default": 8000,
-      "validation": {
-        "min": 1024,
-        "max": 65535
-      }
+      "default": 8000
     },
     "WORKSPACE_EXTERNAL_URL": {
       "type": "string",
       "title": "External URL",
       "description": "External URL for reverse proxy setups (e.g., https://your-domain.com). Overrides base_uri:port for OAuth endpoints",
-      "required": false,
-      "sensitive": false,
-      "validation": {
-        "pattern": "^https?://[a-zA-Z0-9.-]+(:[0-9]+)?$"
-      }
+      "required": false
     },
     "OAUTHLIB_INSECURE_TRANSPORT": {
       "type": "boolean",
       "title": "OAuth Insecure Transport",
       "description": "Allow OAuth over HTTP for development (enable for development only)",
       "required": false,
-      "sensitive": false,
-      "default": true,
-      "platform_overrides": {
-        "production": {
-          "default": false
-        }
-      }
+      "default": true
     },
     "GOOGLE_PSE_API_KEY": {
       "type": "string",
       "title": "Google Custom Search API Key",
       "description": "API key for Google Programmable Search Engine (Custom Search JSON API)",
-      "required": false,
-      "sensitive": true,
-      "validation": {
-        "min_length": 20
-      }
+      "required": false
     },
     "GOOGLE_PSE_ENGINE_ID": {
       "type": "string",
       "title": "Google Custom Search Engine ID",
       "description": "Programmable Search Engine ID (cx parameter) from Google Custom Search Engine Control Panel",
-      "required": false,
-      "sensitive": false,
-      "validation": {
-        "pattern": "^[a-zA-Z0-9:_-]+$"
-      }
+      "required": false
     }
-  },
-  "permissions": {
-    "network": true,
-    "filesystem": {
-      "read": true,
-      "write": ["${config_dir}", "${temp_dir}"]
-    }
-  },
-  "requirements": {
-    "python": ">=3.8",
-    "platforms": ["windows", "macos", "linux"]
   },
   "keywords": [
     "google",
